--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,5 @@ RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) /index.php?route=$1 [QSA,L]
+RewriteRule (.*) /index.php?routeQuery=$1 [QSA,L]
 </IfModule>
