--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
       "ext-json": "*",
       "ext-openssl": "*",
       "ext-simplexml": "*",
-      "ext-dom": "*"
+      "ext-dom": "*",
+      "ext-pdo": "*"
     }
 }
