добавлен класс для генерации ascii

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
       "ext-openssl": "*",
       "ext-simplexml": "*",
       "ext-dom": "*",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-gd": "*",
+      "ext-exif": "*"
     }
 }
