[+] добавлена реализация подтверждления адреса почты и методы для работы с этим [+] Добавлен класс для санитизации данных

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
       "ext-dom": "*",
       "ext-pdo": "*",
       "ext-gd": "*",
-      "ext-exif": "*"
+      "ext-exif": "*",
+      "ext-mbstring": "*"
     }
 }
