--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
       "ext-pdo": "*",
       "ext-gd": "*",
       "ext-exif": "*",
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
         "vimeo/psalm": "^4.27"
