--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
       "ext-gd": "*",
       "ext-exif": "*",
       "ext-mbstring": "*",
-        "dompdf/dompdf": "^2.0"
+        "dompdf/dompdf": "^2.0",
+        "php-ai/php-ml": "^0.9.0"
     },
     "require-dev": {
         "vimeo/psalm": "^4.27"
