--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
       "ext-exif": "*",
       "ext-mbstring": "*",
         "dompdf/dompdf": "^2.0",
-        "php-ai/php-ml": "^0.9.0"
+        "php-ai/php-ml": "^0.9.0",
+        "workerman/workerman": "^4.1"
     },
     "require-dev": {
         "vimeo/psalm": "^4.27"
