--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - composer install
     - echo "Compile complete."
     - echo "Running Unit-tests..."
-    - ./vendor/bin/phpunit tests
+    - ./vendor/bin/phpunit --testdox tests
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
