[+] добавлен Phinx и миграции [-] удалены мусорные файлы [*] скорректирован composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
       "ext-dom": "*",
       "ext-pdo": "*",
       "ext-mbstring": "*",
-        "dompdf/dompdf": "^2.0",
-        "workerman/workerman": "^4.1"
+      "dompdf/dompdf": "^2.0",
+      "robmorgan/phinx": "^0.13.4"
     },
     "require-dev": {
         "vimeo/psalm": "^4.27",
